# memory-vault

./: .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  AUTHORS.md  Boundary-Daemon-Integration.md  CHANGELOG.md  CONCEPT_EXECUTION_EVALUATION.md  CONTRIBUTING.md  Comprehensive-Documentation.md  EVALUATION_REPORT.md  FIX_PLAN.md  Heir-Release-Integration.md  IntentLog-Integration.md  PROJECT_EVALUATION.md  Physical-Token-Integration.md  README.md  RECOVERY.md  REFOCUS_PLAN.md  SECURITY.md  SECURITY_AUDIT_2026-02-20.md  SECURITY_AUDIT_2026-03-12.md  SPECIFICATION.md  SUPPORT.md  Specs.md  Structure.md  __init__.py  agent_os.py  boundary.py  boundry.py  build.bat  build.sh  claude.md  cli.py  crypto.py  db.py  deadman.py  effort.py  errors.py  escrow.py  intentlog.py  (+12 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
docs/: INTEGRATIONS.md  PRODUCTION_READINESS.md
examples/: langchain_memory.py
tests/: __init__.py  conftest.py  test_agent_os.py  test_boundary.py  test_boundry.py  test_deadman.py  test_effort.py  test_errors.py  test_escrow.py  test_intentlog.py  test_merkle.py  test_models.py  test_natlangchain.py  test_physical_token.py  test_siem_reporter.py  test_smoke.py  test_zkproofs.py
