[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-vault"
version = "1.1.0"
description = "Secure, owner-sovereign, offline-first storage for high-value cognitive artifacts"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "kase1111-hash"}
]
keywords = [
    "security",
    "encryption",
    "memory",
    "vault",
    "ai-agents",
    "privacy",
    "cryptography",
    "offline-first"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Archiving",
]
requires-python = ">=3.7"
dependencies = [
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
tpm = [
    "tpm2-pytss>=2.1.0; platform_system=='Linux'",
]
tokens = [
    "fido2>=1.1.0",
    "pyotp>=2.8.0",
]
all = [
    "tpm2-pytss>=2.1.0; platform_system=='Linux'",
    "fido2>=1.1.0",
    "pyotp>=2.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
memory-vault = "memory_vault.cli:main"

[project.urls]
Homepage = "https://github.com/kase1111-hash/memory-vault"
Documentation = "https://github.com/kase1111-hash/memory-vault#readme"
Repository = "https://github.com/kase1111-hash/memory-vault.git"
Issues = "https://github.com/kase1111-hash/memory-vault/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_vault*"]

[tool.setuptools]
py-modules = []
packages = ["memory_vault"]

[tool.setuptools.package-dir]
memory_vault = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["memory_vault"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
